# embedded-fan-controller

./: .clang-tidy  CMakeLists.txt
.github/workflows/: ci.yml
app/: main.c
cmake/linker/: memory.ld
cmake/toolchains/: arm-none-eabi.cmake
diagnostics/: CMakeLists.txt  logger.c  logger.h
drivers/: CMakeLists.txt  adc.c  adc.h  gpio.c  gpio.h  pwm.c  pwm.h
firmware/: CMakeLists.txt  fan_controller.c  fan_controller.h
startup/: startup.c
tests/: CMakeLists.txt  hardware_stubs.c  test_fan_controller.c
